--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -349,8 +349,24 @@
 			}
 		}
 	}
+
+
 }
 
+.section-blog,
+.archive,
+.section-contact,
+.section-charters {
+	.call-now-booking-callout {
+		padding: 3rem 1.5rem 5rem;
+	}
+}
+
+.page-id-9 {
+	.page-wrap + .call-now-booking-callout {
+		padding: 2rem 1.5rem 5rem;
+	}
+}
 
 
 
